# CUDA-KMeans

./: CMakeLists copy.txt  CMakeLists.txt  Makefile  README.md  check_correctness.py  data_custom2.txt  gen_test.py  generate_data.py  generate_data2.py  kernel.cu  kernel_float.cu  wstepny_opis.tex
bckp/: error_utils.h  gpu1.cu  gpu1.cuh  gpu2.cu  gpu2.cuh  main.c  timer.h  utils.cpp  viz.cu  viz.cuh
cuda/: gpu1 copy.cu.bckp  gpu1.cu  gpu1.cu.bckp  gpu1.cu.bckp1  gpu1.cu.eh  gpu1.cu.raw.bckp  gpu1.cuh  gpu1.cuh.bckp  gpu1.cuh.bckp1  gpu12.cu.bckp  gpu1_gather_nodeltakernel.cu.bckp  gpu1_latest.cu.bckp  gpu1_latest.cuh.bckp  gpu1_scatter.cu.bckp  gpu2.cu  gpu2.cuh  visualizer.cu  visualizer.cuh  viz.cu  viz.cuh
include/: cpu.h  dispatcher.h  enum_types.h  timer.h  utils.h
src/: cpu.cpp  main.cpp  utils.cpp  utils.h
tests/: extreme_test.py  fix.py  test_script.py  test_script20.py  test_script_text.py  testing_pipeline.py
